# certification

./: '  .gitmodules  README.md  TODO  copy.sh  deps.sh  run.sh
desktops/: desktop_testing_template.md
desktops/meer10/: 2025-10-23_0027_pop-2404.md  CRARL579.0023.2025.0319.1038_pop-2204.md  CRARL579.0023.2025.0319.1038_ubuntu-2404.md
desktops/meer10-b/: 2025-10-23_0012_pop-2204.md  CRRPLR30.0008.2025.0225.1349_pop2204.md  CRRPLR30.0008.2025.0225.1349_ubuntu2404.md
desktops/meer4/: 2021-03-03_pop-2010_0087.md  2021-06-14_pop-2004_0088.md
desktops/meer5/: 2021-02-09_pop-2010_0047.md  2021-06-11_pop-2010_0052.md
desktops/meer6/: 2021-05-17_pop-2010_0054.md
desktops/meer7/: 2023-01-31_pop-2204_0086.md  2023-01-31_ubuntu-2204_0086.md
desktops/meer8/: 2023-11-03_pop-2204_0027.md  2023-11-03_ubuntu-2204_0027.md
desktops/meer9/: 2024-12-06_53326ba_pop2204.md  2024-12-06_53326ba_ubuntu2404.md  2024-12-09_698de20_pop2204.md  2024-12-09_698de20_ubuntu2404.md  2025-02-06_102269c_pop2204.md  2025-03-05_102269c_pop2204_r2.md
desktops/tehlio-mega-r2/: 2022-09-07_Pop2204_1003-x64
desktops/thelio-b2/: 2020-05-22-pop-2004-after-suspend.md  2021-02-03_pop-2010-F20a.md  (+5 more)
laptops/: README.md  laptop_testing_template.md
launcher/: automated.conf
old_method/: desired_tests.txt  test.sh
provider/: README.md  manage.py
server/: .gitignore  Cargo.toml  Rocket.toml
server/src/: create.rs  file.rs  main.rs  test.rs  upload.rs  util.rs  view.rs
server/templates/: index.html.hbs  model.html.hbs  test.html.hbs
server/templates/view/: model.html.hbs  test.html.hbs
(+601 files in other folders)
