[package]
name = "certification-server"
version = "0.1.0"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]

[dependencies]
rocket = "0.2"
rocket_codegen = "0.2"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
multipart = "0.11"

[dependencies.rocket_contrib]
version = "0.2"
default-features = false
features = ["handlebars_templates"]
