[package]
name = "certification-server"
version = "0.1.0"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket.git" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket.git" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
multipart = "0.13"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket.git"
default-features = false
features = ["handlebars_templates"]
