[package]
name = "certification-server"
version = "0.1.0"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]

[dependencies]
rocket = "0.3"
rocket_codegen = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
multipart = "0.13"

[dependencies.rocket_contrib]
version = "0.3"
default-features = false
features = ["handlebars_templates"]
